// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Boxplot Chart > render boxplot with custom data options that allow to pass all values 1`] = `
{
  "accessibility": {
    "enabled": false,
  },
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "animation": {
      "duration": 300,
    },
    "backgroundColor": "#FFFFFF",
    "events": {
      "load": [Function],
      "selection": [Function],
    },
    "polar": false,
    "spacing": [
      25,
      20,
      20,
      20,
    ],
    "type": "boxplot",
    "zooming": {
      "type": "x",
    },
  },
  "drilldown": {
    "activeDataLabelStyle": {
      "color": "#000000",
    },
    "breadcrumbs": {
      "buttonTheme": {
        "fill": "#ffcb05",
        "states": {
          "hover": {
            "fill": "#f2b900",
            "stroke": "#f2b900",
          },
        },
        "stroke": "#ffcb05",
        "style": {
          "color": "#3a4356",
        },
      },
    },
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": 0,
    "enabled": true,
    "itemStyle": {
      "color": "#000000",
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "auto",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "plotOptions": {
    "boxplot": {
      "dataLabels": {
        "align": "center",
        "enabled": false,
        "formatter": [Function],
        "rotation": 0,
        "style": {
          "fontSize": "13px",
          "fontWeight": "normal",
        },
      },
    },
    "scatter": {
      "dataLabels": {
        "enabled": false,
      },
    },
    "series": {
      "animation": {
        "duration": 600,
      },
      "boostThreshold": 0,
      "dataLabels": {
        "align": "center",
        "enabled": false,
        "formatter": [Function],
        "rotation": 0,
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
        },
      },
      "grouping": false,
      "point": {
        "events": {
          "click": [Function],
        },
      },
      "softThreshold": false,
      "stickyTracking": false,
      "turboThreshold": 0,
    },
  },
  "series": [
    {
      "color": "#0090a1",
      "data": [
        {
          "blur": false,
          "color": "#0090a1",
          "custom": {
            "xValue": [
              "Apple Mac Desktops",
            ],
          },
          "fillColor": "#00cee6",
          "high": 1192.295066833496,
          "innerBoxColor": "#00afc4",
          "low": -446.05875396728516,
          "median": 335.3749694824219,
          "q1": 168.3239288330078,
          "q3": 577.9123840332031,
          "selected": false,
        },
        {
          "blur": false,
          "color": "#0090a1",
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "fillColor": "#00cee6",
          "high": 1167.9941291809082,
          "innerBoxColor": "#00afc4",
          "low": -455.2584037780761,
          "median": 281.7227478027344,
          "q1": 153.461296081543,
          "q3": 559.2744293212891,
          "selected": false,
        },
      ],
      "fillOpacity": 0.8,
      "legendIndex": 0,
      "maxPointWidth": 42,
      "medianWidth": 1,
      "minPointWidth": 20,
      "name": "Some data title",
      "showInLegend": true,
      "strokeOpacity": 0.8,
      "title": "Some data title",
      "whiskerLength": "100%",
      "whiskerWidth": 1,
      "yAxis": 0,
    },
    {
      "color": "#0090a1",
      "data": [
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Desktops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 0,
          "y": 1232.0960693359375,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Desktops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 0,
          "y": 1408.0069580078125,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 1,
          "y": 1181.6976318359375,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 1,
          "y": 1200,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 1,
          "y": 1222.219970703125,
        },
      ],
      "legendIndex": 1,
      "marker": {
        "enabled": true,
        "fillColor": "transparent",
        "lineColor": "#0090a1",
        "lineWidth": 1,
      },
      "name": "Some data title",
      "showInLegend": false,
      "title": "Some data title",
      "type": "scatter",
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "style": {
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
    },
    "useHTML": true,
  },
  "xAxis": [
    {
      "categories": [
        "Apple Mac Desktops",
        "Apple Mac Laptops",
      ],
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 0,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "max": null,
      "min": null,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorTickColor": "#d1d1d7",
      "minorTickLength": 0,
      "plotBands": undefined,
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickLength": 0,
      "tickmarkPlacement": "on",
      "title": {
        "margin": 25,
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
        },
        "text": null,
      },
    },
  ],
  "yAxis": [
    {
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1192.295066833496,
      "min": -455.2584037780761,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "plotBands": undefined,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickmarkPlacement": "on",
      "title": {
        "margin": 25,
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": null,
      },
    },
  ],
}
`;

exports[`Boxplot Chart > render boxplot with single value in data options 1`] = `
{
  "accessibility": {
    "enabled": false,
  },
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "animation": {
      "duration": 300,
    },
    "backgroundColor": "#FFFFFF",
    "events": {
      "load": [Function],
      "selection": [Function],
    },
    "polar": false,
    "spacing": [
      25,
      20,
      20,
      20,
    ],
    "type": "boxplot",
    "zooming": {
      "type": "x",
    },
  },
  "drilldown": {
    "activeDataLabelStyle": {
      "color": "#000000",
    },
    "breadcrumbs": {
      "buttonTheme": {
        "fill": "#ffcb05",
        "states": {
          "hover": {
            "fill": "#f2b900",
            "stroke": "#f2b900",
          },
        },
        "stroke": "#ffcb05",
        "style": {
          "color": "#3a4356",
        },
      },
    },
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": 0,
    "enabled": true,
    "itemStyle": {
      "color": "#000000",
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "auto",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "plotOptions": {
    "boxplot": {
      "dataLabels": {
        "align": "center",
        "enabled": false,
        "formatter": [Function],
        "rotation": 0,
        "style": {
          "fontSize": "13px",
          "fontWeight": "normal",
        },
      },
    },
    "scatter": {
      "dataLabels": {
        "enabled": false,
      },
    },
    "series": {
      "animation": {
        "duration": 600,
      },
      "boostThreshold": 0,
      "dataLabels": {
        "align": "center",
        "enabled": false,
        "formatter": [Function],
        "rotation": 0,
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
        },
      },
      "grouping": false,
      "point": {
        "events": {
          "click": [Function],
        },
      },
      "softThreshold": false,
      "stickyTracking": false,
      "turboThreshold": 0,
    },
  },
  "series": [
    {
      "color": "#0090a1",
      "data": [
        {
          "blur": false,
          "color": "#0090a1",
          "custom": {
            "xValue": [
              "Apple Mac Desktops",
            ],
          },
          "fillColor": "#00cee6",
          "high": 1192.295066833496,
          "innerBoxColor": "#00afc4",
          "low": -446.05875396728516,
          "median": 335.3749694824219,
          "q1": 168.3239288330078,
          "q3": 577.9123840332031,
          "selected": false,
        },
        {
          "blur": false,
          "color": "#0090a1",
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "fillColor": "#00cee6",
          "high": 1167.9941291809082,
          "innerBoxColor": "#00afc4",
          "low": -455.2584037780761,
          "median": 281.7227478027344,
          "q1": 153.461296081543,
          "q3": 559.2744293212891,
          "selected": false,
        },
      ],
      "fillOpacity": 0.8,
      "legendIndex": 0,
      "maxPointWidth": 42,
      "medianWidth": 1,
      "minPointWidth": 20,
      "name": "Cost",
      "showInLegend": true,
      "strokeOpacity": 0.8,
      "title": "Cost",
      "whiskerLength": "100%",
      "whiskerWidth": 1,
      "yAxis": 0,
    },
    {
      "color": "#0090a1",
      "data": [
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Desktops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 0,
          "y": 1232.0960693359375,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Desktops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 0,
          "y": 1408.0069580078125,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 1,
          "y": 1181.6976318359375,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 1,
          "y": 1200,
        },
        {
          "blur": false,
          "custom": {
            "xValue": [
              "Apple Mac Laptops",
            ],
          },
          "marker": {
            "lineColor": "#0090a1",
          },
          "x": 1,
          "y": 1222.219970703125,
        },
      ],
      "legendIndex": 1,
      "marker": {
        "enabled": true,
        "fillColor": "transparent",
        "lineColor": "#0090a1",
        "lineWidth": 1,
      },
      "name": "Cost",
      "showInLegend": false,
      "title": "Cost",
      "type": "scatter",
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "style": {
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
    },
    "useHTML": true,
  },
  "xAxis": [
    {
      "categories": [
        "Apple Mac Desktops",
        "Apple Mac Laptops",
      ],
      "endOnTick": true,
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 0,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "overflow": "none",
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "max": null,
      "min": null,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorTickColor": "#d1d1d7",
      "minorTickLength": 0,
      "plotBands": undefined,
      "startOnTick": true,
      "tickColor": "#d1d1d7",
      "tickLength": 0,
      "tickmarkPlacement": "on",
      "title": {
        "margin": 25,
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
        },
        "text": null,
      },
    },
  ],
  "yAxis": [
    {
      "gridLineColor": "#d1d1d7",
      "gridLineDashStyle": "Dot",
      "gridLineWidth": 1,
      "labels": {
        "autoRotation": [
          -10,
          -20,
          -30,
          -40,
          -50,
          -60,
          -70,
          -80,
          -90,
        ],
        "enabled": true,
        "formatter": [Function],
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
      },
      "lineColor": "#d1d1d7",
      "lineWidth": 1,
      "max": 1192.295066833496,
      "min": -455.2584037780761,
      "minorGridLineColor": "#d1d1d7",
      "minorGridLineDashStyle": "Dot",
      "minorGridLineWidth": 0,
      "minorTickColor": "#d1d1d7",
      "plotBands": undefined,
      "tickColor": "#d1d1d7",
      "tickInterval": null,
      "tickmarkPlacement": "on",
      "title": {
        "margin": 25,
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
          "fontSize": "13px",
          "fontWeight": "normal",
          "pointerEvents": "none",
          "textOutline": "none",
        },
        "text": null,
      },
    },
  ],
}
`;
